--- a/app/src/main/res/layout/item_cuenta_rv.xml
+++ b/app/src/main/res/layout/item_cuenta_rv.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/rv_item_gasto"
+    android:id="@+id/rv_item_cuenta"
     android:layout_width="match_parent"
     android:layout_height="60dp"
-    android:backgroundTint="@color/teal_200"
+    android:backgroundTint="@color/teal_700"
     android:layout_margin="10dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -12,34 +12,24 @@
         android:layout_height="match_parent">
 
         <TextView
-            android:id="@+id/tv_categoria"
+            android:id="@+id/tv_nombre"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             android:layout_marginStart="5dp"
             android:layout_marginTop="5dp"
-            android:text="Categoria" />
+            android:text="Nombre" />
 
         <TextView
-            android:id="@+id/tv_cantidad"
+            android:id="@+id/tv_saldo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             android:layout_marginEnd="5dp"
             android:layout_marginTop="5dp"
-            android:text="Cantidad" />
-
-        <TextView
-            android:id="@+id/tv_nota"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@+id/tv_categoria"
-            app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="5dp"
-            android:layout_marginTop="5dp"
-            android:text="Nota" />
+            android:text="Saldo" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
