--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,6 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="pink1">#E75DFF</color>
-    <color name="pink2">#EA73FF</color>
+    <color name="blue1">#002788</color>
+    <color name="blue2">#012E9E</color>
 </resources>
