--- a/app/src/main/res/layout/fragment_fragmento_cuentas.xml
+++ b/app/src/main/res/layout/fragment_fragmento_cuentas.xml
@@ -7,15 +7,43 @@
     android:layout_height="match_parent"
     tools:context=".fragmentos.cuentas.FragmentoCuentas">
 
+    <TextView
+        android:id="@+id/saldo_total"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="0"
+        android:textSize="30sp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="€"
+        android:textSize="20sp"
+        app:layout_constraintLeft_toRightOf="@+id/saldo_total"
+        app:layout_constraintTop_toTopOf="@+id/saldo_total"
+        app:layout_constraintBottom_toBottomOf="@id/saldo_total"/>
+
+    <TextView
+        android:id="@+id/txt_saldo_total"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Saldo Total Disponible"
+        android:textSize="15sp"
+        app:layout_constraintTop_toBottomOf="@+id/saldo_total"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent" />
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_cuentas"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         tools:listitem="@layout/item_cuenta_rv"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/txt_saldo_total"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintRight_toRightOf="parent" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fab_cuentas"
