--- a/app/src/main/res/layout/item_gasto_rv.xml
+++ b/app/src/main/res/layout/item_gasto_rv.xml
@@ -4,7 +4,7 @@
     android:id="@+id/rv_item_gasto"
     android:layout_width="match_parent"
     android:layout_height="60dp"
-    android:backgroundTint="@color/teal_200"
+    android:backgroundTint="@color/yellow"
     android:layout_margin="10dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
