--- a/app/src/main/res/layout/fragment_fragmento_transacciones.xml
+++ b/app/src/main/res/layout/fragment_fragmento_transacciones.xml
@@ -2,52 +2,47 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/frag_cuentas"
+    android:id="@+id/frag_gastos"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragmentos.cuentas.FragmentoCuentas">
+    tools:context=".fragmentos.transacciones.FragmentoTransacciones">
 
     <TextView
-        android:id="@+id/saldo_total"
+        android:id="@+id/tipo_transacciones"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="0"
-        android:textSize="30sp"
+        android:text="Todos"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        android:textSize="25sp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="10dp"
+        />
 
-    <TextView
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/boton_filtros"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="€"
-        android:textSize="20sp"
-        app:layout_constraintLeft_toRightOf="@+id/saldo_total"
-        app:layout_constraintTop_toTopOf="@+id/saldo_total"
-        app:layout_constraintBottom_toBottomOf="@id/saldo_total"/>
-
-    <TextView
-        android:id="@+id/txt_saldo_total"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Saldo Total Disponible"
-        android:textSize="15sp"
-        app:layout_constraintTop_toBottomOf="@+id/saldo_total"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent" />
+        android:text="FILTROS"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/rv_transacciones"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginEnd="20dp"
+        android:layout_marginTop="10dp"
+        />
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rv_cuentas"
+        android:id="@+id/rv_transacciones"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        tools:listitem="@layout/item_cuenta_rv"
-        app:layout_constraintTop_toBottomOf="@+id/txt_saldo_total"
+        tools:listitem="@layout/item_transaccion_rv"
+        app:layout_constraintTop_toBottomOf="@id/tipo_transacciones"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/fab_cuentas"
+        android:id="@+id/fab_transacciones"
         android:layout_width="45dp"
         android:layout_height="45dp"
         app:layout_constraintEnd_toEndOf="parent"
