--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,12 +2,12 @@
     <!-- Base application theme. -->
     <style name="Theme.SpendWisely" parent="Theme.MaterialComponents.Light.DarkActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/blue2</item>
-        <item name="colorPrimaryVariant">@color/blue1</item>
+        <item name="colorPrimary">@color/black2</item>
+        <item name="colorPrimaryVariant">@color/black1</item>
         <item name="colorOnPrimary">@color/white</item>
         <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/blue2</item>
-        <item name="colorSecondaryVariant">@color/blue1</item>
+        <item name="colorSecondary">@color/black2</item>
+        <item name="colorSecondaryVariant">@color/black1</item>
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimary</item>
