--- a/app/src/main/res/layout/fragment_fragmento_cuentas.xml
+++ b/app/src/main/res/layout/fragment_fragmento_cuentas.xml
@@ -12,19 +12,22 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="0"
+        android:textStyle="bold"
         android:textSize="30sp"
+        android:layout_margin="10dp"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="€"
+        android:textStyle="bold"
         android:textSize="20sp"
         app:layout_constraintLeft_toRightOf="@+id/saldo_total"
         app:layout_constraintTop_toTopOf="@+id/saldo_total"
-        app:layout_constraintBottom_toBottomOf="@id/saldo_total"/>
+        app:layout_constraintBottom_toBottomOf="@id/saldo_total" />
 
     <TextView
         android:id="@+id/txt_saldo_total"
@@ -32,14 +35,16 @@
         android:layout_height="wrap_content"
         android:text="Saldo Total Disponible"
         android:textSize="15sp"
+        android:layout_margin="5dp"
         app:layout_constraintTop_toBottomOf="@+id/saldo_total"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_cuentas"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:layout_margin="10dp"
         tools:listitem="@layout/item_cuenta_rv"
         app:layout_constraintTop_toBottomOf="@+id/txt_saldo_total"
         app:layout_constraintBottom_toBottomOf="parent"
