Tercer commit SW 2023

--- a/app/src/main/res/layout/fragment_fragmento_nueva_transaccion.xml
+++ b/app/src/main/res/layout/fragment_fragmento_nueva_transaccion.xml
@@ -120,8 +120,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toStartOf="@id/spinner_categorias"
                 app:layout_constraintTop_toBottomOf="@id/til_nota"
-                app:layout_constraintBottom_toBottomOf="parent"
                 android:text="Categoría:"
                 android:layout_marginTop="10dp"
                 android:padding="10dp"
@@ -135,6 +135,27 @@
                 app:layout_constraintStart_toEndOf="@+id/txt_categoria"
                 app:layout_constraintEnd_toEndOf="parent"
                 android:layout_marginTop="10dp"/>
+
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/btn_camara"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:text="TOMAR FOTO"
+                app:layout_constraintTop_toBottomOf="@id/txt_categoria"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent" />
+
+            <ImageView
+                android:id="@+id/iv_trans_photo"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/btn_camara"
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:layout_margin="10dp"
+                android:src="@drawable/ic_launcher_foreground" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
