--- a/app/src/main/res/layout/fragment_fragmento_resumen.xml
+++ b/app/src/main/res/layout/fragment_fragmento_resumen.xml
@@ -7,13 +7,23 @@
     android:layout_height="match_parent"
     tools:context=".fragmentos.resumen.FragmentoResumen">
 
+    <ImageView
+        android:id="@+id/iv_candado"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:src="@drawable/baseline_lock_person_24"
+        android:layout_margin="20dp" />
+
     <com.github.mikephil.charting.charts.PieChart
         android:id="@+id/frag_resumen_piechart"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:layout_constraintTop_toTopOf="parent"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toBottomOf="@id/iv_candado"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_margin="10dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
